@@ -7,9 +7,7 @@ import org.modelmapper.TypeToken;
 import org.springframework.stereotype.Service;
 
 import java.lang.reflect.Type;
-import java.util.Arrays;
-import java.util.List;
-import java.util.Optional;
+import java.util.*;
 import java.util.concurrent.atomic.AtomicLong;
 
 @Service
@@ -22,13 +20,13 @@ public class LocationsService {
         this.modelMapper = modelMapper;
     }
 
-    private final List<Location> locations = Arrays.asList(
+    private final List<Location> locations = Collections.synchronizedList(new ArrayList<>(List.of(
             new Location(counter.getAndIncrement(),"Location - 0", 0,0),
             new Location(counter.getAndIncrement(),"Location - 1", 1,-1),
             new Location(counter.getAndIncrement(),"Location - 2", 2,-2),
             new Location(counter.getAndIncrement(),"Location - 3", 3,-3),
             new Location(counter.getAndIncrement(),"Location - 4", 4,-4)
-    );
+    )));
 
     public List<LocationDto> getLocations(Optional<String> name){
         Type targetType = new TypeToken<List<LocationDto>>(){}.getType();
@@ -43,5 +41,11 @@ public class LocationsService {
                 .filter(l -> l.getId() ==  id).findAny()
                 .orElseThrow(() -> new IllegalArgumentException("No location found with id: " + id)),
                 LocationDto.class);
+    }
+
+    public LocationDto createLocation(CreateLocationCommand command) {
+        Location location = new Location(counter.getAndIncrement(), command.getName(), command.getLat(), command.getLon());
+        locations.add(location);
+        return modelMapper.map(location, LocationDto.class);
     }
 }
